[tool.poetry]
name = "donut-dimensions"
version = "0.1.0"
description = "very donut dimensions"
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "donut_dimensions"}]

[tool.poetry.dependencies]
python = "^3.10"
pywavefront = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
